[metadata]
name = uao
version = 0.0.0
description = Big5-UAO encoder/decoder in pure Python
author = eight
author_email = eight04@gmail.com
# See https://pypi.python.org/pypi?%3Aaction=list_classifiers
classifiers =
  Development Status :: 4 - Beta
  Intended Audience :: End Users/Desktop
  License :: OSI Approved :: MIT License
  Natural Language :: Chinese (Traditional)
  Programming Language :: Python :: 3
  Programming Language :: Python :: 3.6
  Programming Language :: Python :: 3 :: Only
  Topic :: Communications :: BBS
	
keywords = ptt, mail
license = MIT
long_description = file: README.rst
url = https://github.com/eight04/ptt-mail-backup

[options]
zip_safe = True
packages = find:
install_requires =
  PTTLibrary>=0.6.8,<0.7
  
[options.entry_points]
console_scripts =
  ptt-mail-backup = ptt_mail_backup:main
