[metadata]
name = uao
version = 0.1.1
description = Big5-UAO encoder/decoder in pure Python
author = eight
author_email = eight04@gmail.com
# See https://pypi.python.org/pypi?%3Aaction=list_classifiers
classifiers =
  Development Status :: 4 - Beta
  Intended Audience :: Developers
  License :: OSI Approved :: MIT License
  Natural Language :: Chinese (Traditional)
  Programming Language :: Python :: 2
  Programming Language :: Python :: 2.7
  Programming Language :: Python :: 3
  Programming Language :: Python :: 3.6
  Programming Language :: Python :: 3.7
  Programming Language :: Python :: 3.8
  Programming Language :: Python :: 3.9
  Topic :: Software Development :: Libraries
  Topic :: Text Processing
	
keywords = encoding, uao, big5
license = MIT
long_description = file: README.rst
url = https://github.com/eight04/pyUAO

[options]
zip_safe = True
packages = find:

[vpip]
command_fallback = python cute.py
